--- a/Car_Rental/Car_Rental/Car_Rental.csproj
+++ b/Car_Rental/Car_Rental/Car_Rental.csproj
@@ -70,6 +70,24 @@
     <Compile Include="Rental.Designer.cs">
       <DependentUpon>Rental.cs</DependentUpon>
     </Compile>
+    <Compile Include="RentalReserve.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RentalReserve.Designer.cs">
+      <DependentUpon>RentalReserve.cs</DependentUpon>
+    </Compile>
+    <Compile Include="RentalReturn.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RentalReturn.Designer.cs">
+      <DependentUpon>RentalReturn.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Reports.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Reports.Designer.cs">
+      <DependentUpon>Reports.cs</DependentUpon>
+    </Compile>
     <Compile Include="SearchEmployee.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -107,6 +125,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Rental.resx">
       <DependentUpon>Rental.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="RentalReserve.resx">
+      <DependentUpon>RentalReserve.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="RentalReturn.resx">
+      <DependentUpon>RentalReturn.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reports.resx">
+      <DependentUpon>Reports.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SearchCustomer.resx">
       <DependentUpon>SearchCustomer.cs</DependentUpon>
