--- a/Car_Rental/Car_Rental/Car_Rental.csproj
+++ b/Car_Rental/Car_Rental/Car_Rental.csproj
@@ -137,6 +137,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="SearchCustomer.resx">
       <DependentUpon>SearchCustomer.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="MainMenu.resx">
       <DependentUpon>MainMenu.cs</DependentUpon>
